--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.MainActivity">
+    android:orientation="vertical"
+    tools:context=".view.MainActivity"
+    tools:ignore="MissingConstraints">
+
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/searchViewLaunch"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:maxLines="1"
+        android:hint="Search item">
+    </androidx.appcompat.widget.SearchView>
 
     <ProgressBar
         android:id="@+id/progressBarBuscaLaunch"
@@ -17,6 +27,9 @@
         android:visibility="gone"
         tools:ignore="MissingConstraints" />
 
-    <include layout="@layout/content_launch"/>
+    <include layout="@layout/content_launch"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
