--- a/app/src/main/res/layout/recyclerview_launch_item.xml
+++ b/app/src/main/res/layout/recyclerview_launch_item.xml
@@ -58,6 +58,72 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textViewRecyclerViewRocketIdText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Rocket Id:"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textViewRecyclerViewRocketId"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:text="falcon1" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textViewRecyclerViewRocketNameText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Rocket Name:"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textViewRecyclerViewRocketName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:text="Falcon 1" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textViewRecyclerViewRocketTypeText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Rocket Type:"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textViewRecyclerViewRocketType"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:text="Merlin A" />
+
+        </LinearLayout>
+
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
